syntax = "proto3";

package example.demo;

option go_package = "github.com/casnerano/protoc-gen-go-guard/example/pb/demo";

import "google/protobuf/empty.proto";
import "proto/guard.proto";

service User {
  // Service requires authentication by default
  option (guard.service_rules) = { require_authentication: true };

  // Overrides service rules — makes method public
  rpc GetPublicProfile(google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (guard.method_rules) = { allow_public: true };
  }

  // Inherits service rules (requires authentication)
  rpc GetPrivateProfile(google.protobuf.Empty) returns (google.protobuf.Empty);

  // Overrides service rules — requires passed at least one policy.
  rpc UpdateProfileStatus(google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (guard.method_rules) = {
      authenticated_access: {
        policy_based: {
          policies: ["demo-period", "premium"],
          requirement: AT_LEAST_ONE
        }
      }
    };
  }

  // Overrides service rules — requires all specified roles.
  rpc DeleteProfile(google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (guard.method_rules) = {
      authenticated_access: {
        role_based: {
          roles: ["user", "verified"],
          requirement: ALL
        }
      }
    };
  }
}